# sir_model

./: CMakeLists.txt  LICENSE  README.md  Requirements.md  main.cpp  sir_model.cpp  sir_model.hpp  sir_model.test.cpp  sir_model_graph.cpp  sir_model_graph.hpp  user_interface.cpp  user_interface.hpp
